--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>I am also well-versed in hardware design and networking, and I have a deep understanding of algorithms and data structures. My goal is to use my skills and expertise to help organizations and individuals harness the power of technology to solve problems, improve processes, and make the world a better place.</p>
       </div>  <!-- .col-1 -->
       <div class="col-2">
-        <img src="https://pixabay.com/illustrations/domain-names-domain-extension-domain-1772242/" alt="https://pixabay.com/illustrations/domain-names-domain-extension-domain-1772242/">
+        <img src="https://pixabay.com/illustrations/domain-names-domain-extension-domain-1772242/">
         <figcaption>Let's say this is a picture of a computer engineer.</figcaption>
       </div>  <!-- .col-2 -->
     </div>   <!-- .container -->
